# pydantic-validator-scraper

./: .env  README.md  __main__.py  config.py  model.py  pyproject.toml
