[project]
name = "pydantic-validation-beautifulsoup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "datetime>=5.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
]
